--- a/RegisterSol4.38.html
+++ b/RegisterSol4.38.html
@@ -30,7 +30,8 @@
 		<input type="email" name="email" id="email" placeholder="your email" required>
 		<label>
 			<strong>Password:</strong>
-			<input type="password" name="password" required minlength="5" maxlength="8">
+			<!--<input type="password" name="password" required minlength="5" maxlength="8"> -->
+			<input type="'password" name="password" pattern=".{5,10}" required title="password should be 5 to 10 characterss" >
 		</label>
 
 	</div>
